objects/PC_Error_Log__c.object
<CustomObject>
    <description>Global error logging object to be used by all applications</description>
    <fields>
        <fullName>PC_Additional_Information__c</fullName>
        <description>Additional info, if applicable, such as error notes or developer hints</description>
        <inlineHelpText>Additional info, if applicable, such as error notes or developer hints</inlineHelpText>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Class_Name__c</fullName>
        <description>Name of the Apex class where the exception or error is originated.</description>
        <inlineHelpText>Name of the Apex class where the exception or error is originated.</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Error_Datetime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The date and time this error occurred</description>
        <inlineHelpText>The date and time this error occurred</inlineHelpText>
        <label>Error Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Error_Message__c</fullName>
        <description>Text for the error message.</description>
        <inlineHelpText>The error message produced by this error</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Line_Number__c</fullName>
        <description>Line number where the exception or error is originated.</description>
        <inlineHelpText>Line number where the exception or error is originated.</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Log_Level__c</fullName>
        <description>Code to represent the cause of the exception or error.</description>
        <inlineHelpText>Code to represent the cause of the exception or error.</inlineHelpText>
        <label>Log Level</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Method_Name__c</fullName>
        <description>Name of the Apex method where the exception or error is originated.</description>
        <inlineHelpText>Name of the Apex method where the exception or error is originated.</inlineHelpText>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Record_ID__c</fullName>
        <description>Record ID which is involved in the exception or error.</description>
        <inlineHelpText>Record ID which is involved in the exception or error.</inlineHelpText>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user who runs the particular code when an exception is thrown.</description>
        <inlineHelpText>The running user for this error</inlineHelpText>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PC_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Stack_Trace__c</fullName>
        <description>Actual error with line and column number.</description>
        <inlineHelpText>The system stack trace for this error, if one exists</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Error_Datetime__c</columns>
        <columns>PC_Running_User__c</columns>
        <columns>PC_Error_Message__c</columns>
        <columns>PC_Stack_Trace__c</columns>
        <columns>PC_Additional_Information__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{000000}</displayFormat>
        <label>Error Log Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>